@@ -78,6 +78,7 @@ public:
 	 *********************************************************************/
 public:
 	void setCaption(const QString& text);
+	void rename();
 
 	/*********************************************************************
 	 * Properties
